# slic3r_coverage_planner

./: CMakeLists.txt  README.md  package.xml
include/: coverage_planner.h  coverage_planner.hpp
include/cfg/: coverage_planner.cfg
launch/: coverage_planner.launch
src/: coverage_planner.cpp  main.cpp  slic3r_coverage_client.py
