<?xml version="1.0"?>
<package format="3">
    <name>slic3r_coverage_planner</name>
    <version>0.0.0</version>
    <description>The slic3r_coverage_planner package</description>
    <maintainer email="clemens1@familie-elflein.de">Clemens Elflein</maintainer>
    <license>AGPLv3</license>


    <author email="clemens1@familie-elflein.de">Clemens Elflein</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rclcpp</build_depend>

    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>rosidl_default_generators</build_depend>
    <build_depend>visualization_msgs</build_depend>
    
    <build_export_depend>rclcpp</build_export_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>
    <exec_depend>tf2</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
